remove style tags

--- a/hl-theme.css
+++ b/hl-theme.css
@@ -1,7 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet"><style>
-/* GLOBAL */
-
-html {
+<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">html {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box;
@@ -2354,5 +2351,3 @@ ul.pager li a:focus {
 #content-column .block ul.contextual-links li::before {
     content: "";
 }
-
-</style>
