--- a/hl-theme.css
+++ b/hl-theme.css
@@ -854,15 +854,15 @@ body.page-search .hl__search-box-icon::before {
     content: "";
     position: absolute;
     right: 7px;
-    top: 0;
-    bottom: -44px;
+    /* top: 0;
+    bottom: -44px; */
     width: 17px;
     height: 32px;
     background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='17' height='17' viewBox='0 0 17 17'%3E%3Cg%3E%3Cg transform='translate(-158 -656)'%3E%3Cpath d='M170.15 666.7l4.85 4.85-1.45 1.45-4.86-4.85v-.77l-.26-.27a6.32 6.32 0 1 1 .68-.68l.27.26zm-5.83 0a4.37 4.37 0 1 0 .01-8.74 4.37 4.37 0 0 0-.01 8.73z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E") center / contain no-repeat;
 }
 
 body.page-search .hl__search-box-icon::before {
-    bottom: 0;
+    bottom: -4px;
     right: 0;
     left: -33px;
 }
