--- a/hl-theme.css
+++ b/hl-theme.css
@@ -835,54 +835,54 @@ ul.nice-menu ul {
 
 /* magnifying glass */
 
-.search-block-form input.form-submit,
+/* .search-block-form input.form-submit,
 .search-block-form #edit-submit,
 #search-block-form input.form-submit,
 #search-block-form #edit-submit {
     background: none;
     height: 33px;
     width: 44px;
-}
+} */
 
-#search-block-form #edit-actions,
+/* #search-block-form #edit-actions,
 body.page-search .hl__search-box-icon {
     position: relative;
-}
+} */
 
 #search-block-form #edit-actions::before,
 body.page-search .hl__search-box-icon::before {
-    content: "";
+    /* content: "";
     position: absolute;
-    right: 7px;
-    /* top: 0;
-    bottom: -44px; */
-    width: 17px;
+    right: 7px; */
+    /* top: 0; */
+    /* bottom: -44px; */
+    /* width: 17px;
     height: 32px;
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='17' height='17' viewBox='0 0 17 17'%3E%3Cg%3E%3Cg transform='translate(-158 -656)'%3E%3Cpath d='M170.15 666.7l4.85 4.85-1.45 1.45-4.86-4.85v-.77l-.26-.27a6.32 6.32 0 1 1 .68-.68l.27.26zm-5.83 0a4.37 4.37 0 1 0 .01-8.74 4.37 4.37 0 0 0-.01 8.73z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E") center / contain no-repeat;
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='17' height='17' viewBox='0 0 17 17'%3E%3Cg%3E%3Cg transform='translate(-158 -656)'%3E%3Cpath d='M170.15 666.7l4.85 4.85-1.45 1.45-4.86-4.85v-.77l-.26-.27a6.32 6.32 0 1 1 .68-.68l.27.26zm-5.83 0a4.37 4.37 0 1 0 .01-8.74 4.37 4.37 0 0 0-.01 8.73z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E") center / contain no-repeat; */
 }
 
-body.page-search .hl__search-box-icon::before {
+/* body.page-search .hl__search-box-icon::before {
     bottom: -4px;
     right: 0;
     left: -33px;
-}
+} */
 
-.search-block-form input.form-submit,
+/* .search-block-form input.form-submit,
 .search-block-form #edit-submit,
 #search-block-form input.form-submit,
 #search-block-form #edit-submit,
 #search-form #edit-submit {
     margin: 0px 0 0 -50px !important;
-}
+} */
 
-.page-search input.form-text {
+/* .page-search input.form-text {
     padding: 0 45px 0 7px;
-}
+} */
 
-#search-form #edit-submit {
+/* #search-form #edit-submit {
     height: 47px;
     background: none;
-}
+} */
 
 
 /* HOMEPAGE */
