--- a/hl-theme.css
+++ b/hl-theme.css
@@ -171,7 +171,7 @@ a:visited,
     color: #0579b8;
     font-family: "Trueno", sans-serif;
     font-size: 17px;
-    font-weight: 600 !important;
+    font-weight: 600;
     font-style: normal;
     text-decoration: none;
     transition: border 0.28s cubic-bezier(0.28, 1.08, 1, 0.96);
@@ -803,6 +803,16 @@ ul.nice-menu ul {
     padding: 14px 25px;
 }
 
+.search-block-form .container-inline,
+#search-block-form .container-inline,
+#search-form .container-inline {
+ display: grid;
+ grid-template-columns: calc(100% - 32px) 32px;
+ background: #fff;
+ border-radius: 4px;
+ align-items: center;
+}
+
 .search-block-form .container-inline .form-item .form-text,
 #search-block-form .container-inline .form-item .form-text {
     color: #6c6c6c;
@@ -810,79 +820,44 @@ ul.nice-menu ul {
     font-size: 15px;
     font-weight: 300;
     padding: 7px !important;
-}
-
-.search-block-form .container-inline .form-item .form-text,
-#search-block-form .container-inline .form-item .form-text {
     border-color: transparent;
-    border-radius: 4px !important;
+    border-radius: 0 4px 4px 0 !important;
 }
 
 
 /* search results page box */
-
+.page-search-site #main-content-header #page-title {
+  white-space: nowrap;
+}
+.page-search-site .form-item {
+ margin:0;
+}
+#search-form .container-inline {
+ border: 1px solid #1e1e1e;
+}
+#search-form #edit-basic #edit-submit {
+  width: 25px;
+}
 #edit-keys {
-    width: 100%;
+    /* width: 100%; */
     max-width: 560px;
     height: 45px;
     font-size: 18px;
     background: #ffffff;
-    border: 1px solid #1e1e1e;
+    border: transparent;
     border-radius: 4px;
     font-weight: 400;
 }
 
 
 /* magnifying glass */
-
-/* .search-block-form input.form-submit,
-.search-block-form #edit-submit,
-#search-block-form input.form-submit,
-#search-block-form #edit-submit {
-    background: none;
-    height: 33px;
-    width: 44px;
-} */
-
-/* #search-block-form #edit-actions,
-body.page-search .hl__search-box-icon {
-    position: relative;
-} */
-
-#search-block-form #edit-actions::before,
-body.page-search .hl__search-box-icon::before {
-    /* content: "";
-    position: absolute;
-    right: 7px; */
-    /* top: 0; */
-    /* bottom: -44px; */
-    /* width: 17px;
-    height: 32px;
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='17' height='17' viewBox='0 0 17 17'%3E%3Cg%3E%3Cg transform='translate(-158 -656)'%3E%3Cpath d='M170.15 666.7l4.85 4.85-1.45 1.45-4.86-4.85v-.77l-.26-.27a6.32 6.32 0 1 1 .68-.68l.27.26zm-5.83 0a4.37 4.37 0 1 0 .01-8.74 4.37 4.37 0 0 0-.01 8.73z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E") center / contain no-repeat; */
+.search-block-form input.form-submit, .search-block-form #edit-submit, #search-block-form input.form-submit, #search-block-form #edit-submit, #search-form #edit-submit {
+ margin: 0 !important;
+ height: 32px;
+ width: 17px;
+ right: -7.5px;
+ background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='17' height='17' viewBox='0 0 17 17'%3E%3Cg%3E%3Cg transform='translate(-158 -656)'%3E%3Cpath d='M170.15 666.7l4.85 4.85-1.45 1.45-4.86-4.85v-.77l-.26-.27a6.32 6.32 0 1 1 .68-.68l.27.26zm-5.83 0a4.37 4.37 0 1 0 .01-8.74 4.37 4.37 0 0 0-.01 8.73z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E ") center / contain no-repeat;
 }
-
-/* body.page-search .hl__search-box-icon::before {
-    bottom: -4px;
-    right: 0;
-    left: -33px;
-} */
-
-/* .search-block-form input.form-submit,
-.search-block-form #edit-submit,
-#search-block-form input.form-submit,
-#search-block-form #edit-submit,
-#search-form #edit-submit {
-    margin: 0px 0 0 -50px !important;
-} */
-
-/* .page-search input.form-text {
-    padding: 0 45px 0 7px;
-} */
-
-/* #search-form #edit-submit {
-    height: 47px;
-    background: none;
-} */
 
 
 /* HOMEPAGE */
@@ -1010,13 +985,16 @@ body.page-home .region-content-top h2, body.page-home .region-content-top p {
     border-bottom: none;
 }
 
-div[id^=event-popover] .event-title a {
-    color: #0579b8;
-    font-size: 1em;
-}
-
 div[id^=event-popover] .event-title {
     margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+div[id^=event-popover] .event-title a {
+    color: #0579b8;
+    font-size: 18px;
+    line-height: 24px !important;
+    font-family: "Trueno", sans-serif;
 }
 
 .ui-widget .event-location,
@@ -1028,6 +1006,104 @@ div[id^=event-popover] .event-title {
 
 .ui-button-icon-only .ui-icon {
     margin-top: 5px;
+}
+
+.ui-widget div[id^=event-popover] .event-location,
+.ui-widget div[id^=event-popover] .event-date span {
+    font-size: 14px;
+    color: #6c6c6c;
+    padding-top: 10px;
+    font-family: "Trueno", sans-serif;
+    font-weight: normal;
+}
+div[id^=event-popover] .date-display-start::before {
+  content: "\A";
+  white-space: pre;
+}
+div[id^=event-popover] .event-location {
+ padding-bottom: 10px;
+}
+div[id^=event-popover] .event-location span {
+  display: none;
+}
+
+.ui-dialog .ui-dialog-titlebar button.ui-dialog-titlebar-close {
+ margin:0;
+ z-index: 10;
+}
+
+div[aria-describedby^="event-popover-"] .ui-icon-closethick,
+div[aria-describedby*=" event-popover-"] .ui-icon-closethickt {
+ background:none;
+}
+.ui-button-icon-primary.ui-icon.ui-icon-closethick::before,
+.ui-button-icon-primary.ui-icon.ui-icon-closethick::after {
+  background-color: #1e1e1e;
+  content: "";
+  cursor: pointer;
+  display: block;
+  height: 3px;
+  position: absolute;
+  right: 1px;
+  transition: all 500ms ease-in-out;
+  width: 20px;
+  background-color: #1e1e1e;
+  top: 21px;
+}
+.ui-button-icon-primary.ui-icon.ui-icon-closethick::before {
+  transform: rotate(-45deg);
+}
+.ui-button-icon-primary.ui-icon.ui-icon-closethick::after {
+  transform: rotate(45deg);
+}
+.ui-icon {
+  width:20px;
+  height:20px;
+  overflow: visible;
+}
+
+.ui-button-icon-only .ui-icon,
+.ui-button-text-icon-primary .ui-icon,
+.ui-button-text-icon-secondary .ui-icon,
+.ui-button-text-icons .ui-icon,
+.ui-button-icons-only .ui-icon {
+ position:absolute;
+ top:0;
+ margin-top:-8px
+}
+
+/* close button when logged in */
+.logged-in div[aria-describedby^="event-popover-"] .ui-widget-header .ui-state-default {
+  top: 0;
+}
+
+.page-calendar ul.tabs.primary li.active a {
+    background: #fafafa;
+    color: #6c6c6c;
+}
+.page-calendar ul.tabs.primary li a {
+    padding: 10px 20px;
+}
+
+#main-content .view-os-events.view-id-os_events .view-content {
+  padding: 0 30px 30px 30px;
+}
+.calendar-calendar td .inner div.day a {
+  color:#0579b8;
+  font-weight: normal !important;
+  font-size: 14px !important;
+}
+.view .date-nav-wrapper .date-heading {
+  top:3px;
+  margin-top: -3px;
+}
+.view .date-nav-wrapper .date-prev,
+.view .date-nav-wrapper .date-next {
+  padding:0;
+  height: 40px;
+}
+.item-list .pager {
+  padding-top: 0;
 }
 
 
@@ -1188,6 +1264,81 @@ table td.mini .mini-day-on a {
 .calendar-calendar .day-view td {
     padding: 0;
     border: 1px solid #dfdfdf;
+}
+
+/* cal week/day views */
+.calendar-calendar td span.date-display-single,
+.calendar-calendar td span.date-display-start,
+.calendar-calendar td span.date-display-end,
+.calendar-calendar td span.date-display-separator {
+ font-weight:normal;
+ font-size: 11px;
+ line-height: 1.1em;
+ padding-top:10px;
+}
+.calendar.dayview .date-display-single span,
+.calendar.weekview .date-display-single span {
+ font-size:11px;
+}
+
+.calendar-calendar .week-view .full div.single-day div.weekview a,
+.calendar-calendar .day-view .full div.single-day div.dayview a {
+ font-family: "Trueno", sans-serif;
+ text-decoration: none;
+}
+.calendar-calendar .week-view .full div.single-day div.weekview a:focus,
+.calendar-calendar .day-view .full div.single-day div.dayview a:focus,
+.calendar-calendar .week-view .full div.single-day div.weekview a:hover,
+.calendar-calendar .day-view .full div.single-day div.dayview a:hover {
+ text-decoration:underline;
+}
+/* year view */
+.calendar-calendar div.date-nav a {
+ color:#1e1e1e;
+ text-transform: uppercase;
+ letter-spacing: 1.5px;
+ font-weight: 600;
+}
+.calendar-calendar div.date-nav a:focus, .calendar-calendar div.date-nav a:hover {
+  border-color: rgba(30,30,30,0.5);
+}
+.calendar-calendar {
+  padding: 0 5px;
+  background: #fafafa;
+}
+
+.calendar-calendar th.days {
+    background-color: #fafafa;
+    color: #6c6c6c;
+    font-family: "Trueno", sans-serif;
+    font-weight: 400;
+    font-size: 0px;
+    padding: 6px;
+    border: none;
+}
+.calendar-calendar th.days:first-letter {
+  font-size: 14px;
+}
+
+.view .date-nav-wrapper {
+ margin-top:0;
+ padding-top: 5px;
+ background: #fafafa;
+}
+.view .date-nav-wrapper .date-nav {
+ margin-bottom:0;
+}
+.calendar-calendar .year-view td {
+ padding:5px;
+ background: #fafafa;
+}
+.calendar-calendar td.has-no-events,
+.calendar-calendar td.has-events {
+    background: none;
+}
+.year-view {
+ overflow-x: auto;
+ /* NOT ACCESSIBLE AND SHOULD FIND ANOTHER SOLUTION */
 }
 
 
